@@ -12,6 +12,7 @@ version 0.99.5 - xx-Dec-2010
 . [FIX] FileUtils: fixed big memory leaks on .ccz inflater
 . [FIX] Node: udpated doxygen strings regarding default anchorPoint (issue #1049)
 . [FIX] Sprite: updateTransform can be overriden (issue #824)
+. [FIX] SpriteFrameCache: textureFileName is relative to path (issue #1044)
 . [FIX-MAC] Display Link thread: async images works as expected. Disabled by default.
 . [FIX-MAC] MacGLView: VSync is enabled when the view is loaded from the NIB
 . [TEST] Added Glyph Designer test case
